@@ -8,7 +8,7 @@
 # See http://www.remote.org/jochen/mail/info/chars.html
 #
 class EmailValidator < ActiveModel::EachValidator
-  PATTERN = /\A\s*([-a-z0-9+._']{1,64})@((?:[-a-z0-9]+\.)+[a-z]{2,})\s*\z/i.freeze
+  PATTERN = /@/.freeze
 
   def validate_each(record, attribute, value)
     unless value =~ PATTERN
